Fix calendar whitespace issue

--- a/client/styles/output.css
+++ b/client/styles/output.css
@@ -218,7 +218,8 @@ button.rbc-input::-moz-focus-inner {
 .rbc-show-more {
   display: block;
   overflow: hidden;
-  text-overflow: ellipsis; }
+  text-overflow: ellipsis;
+  white-space: nowrap; }
 
 .rbc-rtl {
   direction: rtl; }
@@ -229,6 +230,7 @@ button.rbc-input::-moz-focus-inner {
 .rbc-header {
   overflow: hidden;
   text-overflow: ellipsis;
+  white-space: nowrap;
   padding: 0 3px;
   text-align: center;
   vertical-align: middle;
@@ -266,7 +268,8 @@ button.rbc-input::-moz-focus-inner {
   border: 1px solid #cccccc;
   padding: .375rem 1rem;
   border-radius: 4px;
-  line-height: normal; }
+  line-height: normal;
+  white-space: nowrap; }
 
 .rbc-toolbar button:active,
 .rbc-toolbar button.rbc-active {
@@ -294,7 +297,8 @@ button.rbc-input::-moz-focus-inner {
   border-color: #adadad; }
 
 .rbc-btn-group {
-  display: inline-block; }
+  display: inline-block;
+  white-space: nowrap; }
 
 .rbc-btn-group > button:first-child:not(:last-child) {
   border-top-right-radius: 0;
@@ -387,7 +391,8 @@ button.rbc-input::-moz-focus-inner {
   font-weight: bold;
   font-size: 85%;
   height: auto;
-  line-height: normal; }
+  line-height: normal;
+  white-space: nowrap; }
 
 .rbc-month-view {
   position: relative;
@@ -631,6 +636,9 @@ button.rbc-input::-moz-focus-inner {
   width: 100%;
   border: 1px solid #dedede;
   min-height: 0; }
+
+.rbc-time-view .rbc-time-gutter {
+  white-space: nowrap; }
 
 .rbc-time-view .rbc-allday-cell {
   width: 100%;
